@@ -26,7 +26,7 @@ about what Tapestry is, how to use it and why you should!
 
 <ul>
 <li><b>small</b> -- just Tapestry.jar, gnu-regexp.jar,
-the <a href="doc/Tapestry.pdf">Tapestry Developer's Guide</a> and the 
+the <a href="doc/DevelopersGuide/DevelopersGuide.html">Tapestry Developer's Guide</a> and the 
 <a href="doc/api/overview-summary.html">javadoc for Tapestry</a>
 <li><b>medium</b> -- small, plus Tapestry source code, the JBE (Java Build Environment) and JBE documentation
 <li><b>full</b> -- medium, plus third party JARs used by Tapestry, 
@@ -164,7 +164,7 @@ broken if you did not download the <b>full</b> distribution).
 		example and tutorial code
 	<li><a href="doc/Tapestry-Whitepaper.pdf">Tapestry Whitepaper</a> (PDF) --
 		An executive summary of Tapestry
-	<li><a href="doc/Tapestry.pdf">Tapestry Developer's Guide</a> (PDF) -- main reference for
+	<li><a href="doc/DevelopersGuide/DevelopersGuide.html">Tapestry Developer's Guide</a> (HTML) -- main reference for
 		designing and developing Tapestry applications
 	<li><a href="doc/JBE/JBE.html">Java Build Environment</a> (HTML) -- guide to setting up
 		and using the JBE (a set of Makefiles used to build and run Tapestry and Tapestry applications).
