@@ -1,3 +1,7 @@
+* Feb 13 2001 hship
+
+Replace old DevelopersGuide (in PDF format) with new DocBook-derived HTML.
+
 * Jan 31 2001 hship
 
 Replace old JBE documentation (in PDF format) with new DocBook-derived HTML.
